--- a/src/MirasvitGdprCookie/view/frontend/templates/modal/group.phtml
+++ b/src/MirasvitGdprCookie/view/frontend/templates/modal/group.phtml
@@ -2,39 +2,47 @@
 /** @var Mirasvit\GdprCookie\Block\CookieGroupBlock $block */
 ?>
 <?php
+/** @var Mirasvit\GdprCookie\Block\CookieGroupBlock $block */
+/** @var \Hyva\Theme\Model\ViewModelRegistry $viewModels */
+/** @var \Hyva\Theme\ViewModel\HeroiconsOutline $heroicons */
+/** @var \Magento\Framework\Escaper $escaper */
+$heroicons = $viewModels->require(\Hyva\Theme\ViewModel\HeroiconsOutline::class);
+
 $group   = $block->getCookieGroup();
 $groupId = $group->getId();
 
 $disabled = $group->isRequired() ? 'disabled' : '';
 $checked  = !$group->isRequired() && !$block->getOptionalGroupsChecked() ? '' : 'checked';
 ?>
-<div class="mst-gdpr__cookie-settings--cookie-group-container mst-gdpr__cookie-settings--cookie-group-container-<?= $groupId; ?>" onclick="showCookieGroup()">
-    <div class="title-container">
-        <h4 class="title">
-            <?= $block->escapeHtml(__($group->getName())); ?>
+<div class="cookie-group-container cookie-group-container-<?= $groupId; ?> border border-gray-300 mt-4 p-3 rounded-2xl shadow-sm"
+     x-data="{open<?= $groupId; ?>: false}">
+    <div class="flex flex justify-between">
+        <h4 class="title text-lg cursor-pointer"
+            x-on:click="open<?= $groupId; ?> = !open<?= $groupId; ?>">
+            <span x-show="! open<?= $groupId; ?>"><?= $heroicons->chevronUpHtml('h-6 inline mr-2 w-6', 4, 4); ?></span>
+            <span x-show="open<?= $groupId; ?>" style="display: none"><?= $heroicons->chevronDownHtml('h-6 inline mr-2 w-6', 4, 4); ?></span>
+            <?= $escaper->escapeHtml(__($group->getName())); ?>
         </h4>
-        <?php $inputAttrName = 'name="allowed-group-' . $groupId . '"'; ?>
-        <label class="switch">
-            <span style="display: none"><?= __('Allow') ?></span>
-            <input id="allowed-group-<?= $groupId ?>" class="checkbox" type="checkbox" value="1" <?= $disabled; ?> <?= $checked; ?> data-group-id="<?= $groupId; ?>" <?= $inputAttrName ?> aria-label="<?= __('Allow') ?>">
-            <span class="slider round <?= $disabled; ?>"></span>
-        </label>
 
-        <div class="content">
-            <div>
-                <?= $block->escapeHtml(__($group->getDescription())); ?>
-            </div>
+        <input class="checkbox disabled:opacity-40" type="checkbox" value="1" <?= $disabled; ?> checked data-group-id="<?= $groupId; ?>" name="allowed-group-<?= $groupId; ?>">
+    </div>
+
+    <div class="content mt-4 pl-5" x-show.transition.origin.top="open<?= $groupId; ?>" style="display: none">
+        <div>
+            <?= $escaper->escapeHtml(__($group->getDescription())); ?>
+        </div>
+        <div class="cookie-list">
             <table>
                 <tr>
-                    <th><?= __('Name') ?></th>
-                    <th><?= __('Description') ?></th>
-                    <th><?= __('Lifetime') ?></th>
+                    <th class="p-2"><?= __('Name') ?></th>
+                    <th class="p-2"><?= __('Description') ?></th>
+                    <th class="p-2"><?= __('Lifetime') ?></th>
                 </tr>
                 <?php foreach ($block->getCookies() as $cookie): ?>
                     <tr>
-                        <td><?= $block->escapeHtml($cookie->getName()) ?></td>
-                        <td><?= $block->escapeHtml($cookie->getDescription()) ?></td>
-                        <td><?= $block->humanReadableLifetime($cookie->getLifetime()) ?></td>
+                        <td class="p-2"><?= $escaper->escapeHtml($cookie->getName()) ?></td>
+                        <td class="p-2"><?= $escaper->escapeHtml($cookie->getDescription()) ?></td>
+                        <td class="p-2"><?= $block->humanReadableLifetime($cookie->getLifetime()) ?></td>
                     </tr>
                 <?php endforeach ?>
             </table>
@@ -42,14 +50,3 @@ $checked  = !$group->isRequired() && !$block->getOptionalGroupsChecked() ? '' : 
     </div>
 
 </div>
-
-<script>
-    function showCookieGroup () {
-        var elSelector = ".mst-gdpr__cookie-settings--cookie-group-container-<?= $groupId; ?>";
-        document.querySelector(elSelector).collapsible(
-            {
-                header: document.querySelector(elSelector + " .title"),
-                content: document.querySelector(elSelector + " .content")}
-        );
-    })
-</script>
