--- a/src/MirasvitGdprCookie/view/frontend/templates/settings_bar.phtml
+++ b/src/MirasvitGdprCookie/view/frontend/templates/settings_bar.phtml
@@ -3,29 +3,55 @@
 
 use Mirasvit\GdprCookie\Block\SettingsModal;
 
+/** @var \Hyva\Theme\Model\ViewModelRegistry $viewModels */
+/** @var \Hyva\Theme\ViewModel\HeroiconsOutline $heroicons */
+/** @var \Magento\Framework\Escaper $escaper */
+$heroicons = $viewModels->require(\Hyva\Theme\ViewModel\HeroiconsOutline::class);
+
 ?>
 
-<div style="display: none;" data-bind="mageInit: {
-        'Magento_Ui/js/modal/modal':{
-            'type': 'popup',
-            'title': '<?= $block->getPopupTitle(); ?>',
-            'trigger': '[data-trigger-settings=trigger]',
-            'responsive': true,
-            'innerScroll': true,
-            'modalClass': 'mst-gdpr__cookie-settings--cookie-modal-settings',
-            'buttons': [{
-                text: jQuery.mage.__('Apply'),
-                class: 'action primary mst-gdpr__cookie-settings--success-btn'
-            }]
-        }}">
-    <div class="content">
-        <div class="modal-text">
+<div class="relative z-30"
+     x-data="initGdprSettingsModal()" x-init="init()">
+    <div class="fixed w-full h-full flex items-center justify-center" x-show="open">
+        <div class="absolute bg-black h-full opacity-50 w-full" x-on:click="close"
+             style="display: none"
+             x-show="open"></div>
+        <div class="bg-white border border-gray-200 content h-full lg:max-w-4xl max-w-sm md:h-4/6 md:max-w-md overflow-auto overscroll-contain p-12 rounded-md z-20"
+             style="display: none"
+             x-show.transition.origin.top="open">
+            <div class="border-b border-gray-500 flex justify-between mb-3 pb-4">
+                <h3 class="text-3xl"><?= $escaper->escapeHtml($block->getPopupTitle()) ?></h3>
+                <div class="cursor-pointer pt-1"
+                     x-on:click="close"><?= $heroicons->xHtml('w-6 h-6', 6, 6); ?></div>
+            </div>
             <?= $block->getPopupDescription(); ?>
-        </div>
-        <div class="mst-gdpr__cookie-settings--group-content">
-            <?php foreach ($block->getCookieGroups() as $group): ?>
-                <?= $block->getCookieGroupHtml($group); ?>
-            <?php endforeach; ?>
-        </div>
+            <div class="group-content">
+                <?php foreach ($block->getCookieGroups() as $group): ?>
+                    <?= $block->getCookieGroupHtml($group); ?>
+                <?php endforeach; ?>
+            </div>
+            <button class="btn btn-primary ml-auto mt-4 text-sm cursor-pointer"
+                    x-on:click="save"><span><?= __('Save') ?></span></button></div>
     </div>
 </div>
+<script>
+    function initGdprSettingsModal() {
+        return {
+            open: false,
+            close: function () {
+                this.open = false;
+                document.querySelector('body').style.overflow = 'auto';
+            },
+            init: function () {
+                window.addEventListener('mst-gdpr-cookie-settings-open', () => {
+                    document.querySelector('body').style.overflow = 'hidden';
+                    this.open = true;
+                })
+            },
+            save: function () {
+                window.dispatchEvent(new CustomEvent('mst-gdpr-cookie-settings-save'));
+                this.close();
+            }
+        };
+    }
+</script>
