--- a/src/MirasvitGdprCookie/view/frontend/templates/settings_bar.phtml
+++ b/src/MirasvitGdprCookie/view/frontend/templates/settings_bar.phtml
@@ -31,7 +31,7 @@ $heroicons = $viewModels->require(\Hyva\Theme\ViewModel\HeroiconsOutline::class)
                 <?php endforeach; ?>
             </div>
             <button class="btn btn-primary ml-auto mt-4 text-sm cursor-pointer"
-                    x-on:click="save"><span><?= __('Save') ?></span></button></div>
+                    x-on:click="save"><span><?= __('Apply') ?></span></button></div>
     </div>
 </div>
 <script>
