--- a/src/MirasvitGdpr/view/frontend/templates/customer/account/anonymize.phtml
+++ b/src/MirasvitGdpr/view/frontend/templates/customer/account/anonymize.phtml
@@ -1,32 +1,18 @@
 <?php
 /** @var \Mirasvit\Gdpr\Block\Customer\Account\Anonymize $block */
 ?>
-<div class="block">
-    <div class="block-title">
+<div class="block mt-8">
+    <div class="block-title text-xl">
         <strong><?= __('Anonymize personal data') ?></strong>
     </div>
 
-    <div class="block-content">
-        <div id="anonymize-intro">
-            <p><?= __('You can request the anonymization of your personal data that we have stored by clicking the button below:') ?></p>
-            <div class="actions-toolbar">
-                <button
-                    type="button"
-                    class="action"
-                    data-show="anonymize-form"
-                    aria-controls="anonymize-form"
-                    aria-expanded="false"
-                    data-expanded-text="<?= __('Hide') ?>"
-                    data-collapsed-text="<?= __('Anonymize my account') ?>">
-                    <span><?= __('Anonymize my account') ?></span>
-                </button>
-            </div>
-        </div>
+    <div class="block-content" x-data="{active: false}">
 
-        <form method="post" action="<?= $block->getUrl('gdpr/customer/anonymize') ?>" data-mage-init='{"validation":{}}'>
+
+        <form method="post" action="<?= $block->getUrl('gdpr/customer/anonymize') ?>">
             <input name="form_key" type="hidden" value="<?= $block->getFormKey() ?>"/>
 
-            <fieldset class="fieldset" hidden="hidden" id="anonymize-form" role="region">
+            <fieldset class="fieldset" style="display: none" id="anonymize-form" x-show="active">
                 <div class="field">
                     <p><strong><?= __('To anonymize your account as well as your data from our website, please submit the form.') ?></strong></p>
                     <p><?= __('Please be aware that we will delete your addresses and will update your name to Anonymous.') ?></p>
@@ -34,32 +20,34 @@
                 </div>
 
                 <div class="field required">
-                    <label class="label" for="current-password-anonymize">
+                    <label class="label" for="anon-current-password">
                         <span><?= __('Current Password') ?></span>
                     </label>
                     <div class="control">
-                        <input id="current-password-anonymize" type="password" class="input-text" name="password" autocomplete="off" aria-required="true" data-validate="{required:true}">
+                        <input id="anon-current-password" type="password" class="input-text" name="password" autocomplete="off" required aria-required="true">
                     </div>
                 </div>
-                <?php if ($points = $block->getIsCustomerHasPassword()): ?>
-                    <p class="mst_gdpr_no_password">
-                        <?= __('Please, sing out and use "Forgot Password" link if you used Social Login to sign up the store. You have to register with default registration form to download personal data, as we do not store your social password.') ?>
-                    </p>
-                <?php endif; ?>
 
                 <div class="field choice required">
-                    <input type="checkbox" id="anonymize_accept" data-validate="{required:true}" name="accept" value="1" class="checkbox">
+                    <input type="checkbox" id="anonymize_accept" required name="accept" value="1" class="checkbox">
                     <label for="anonymize_accept" class="label"><span><?= __('I understand and want anonymize my personal data') ?></span></label>
                 </div>
 
                 <div class="actions-toolbar">
-                    <button type="submit" class="action primary">
+                    <button type="submit" class="action btn btn-primary">
                         <span><?= __('Process') ?></span>
                     </button>
                 </div>
             </fieldset>
         </form>
+
+        <div id="anonymize-intro" x-show="!active">
+            <p><?= __('You can request the anonymization of your personal data that we have stored by clicking the button below:') ?></p>
+            <div class="actions-toolbar">
+                <button type="button" class="action btn" data-show="anonymize-form" data-hide="anonymize-intro" @click="active=true">
+                    <span><?= __('Anonymize my account') ?></span>
+                </button>
+            </div>
+        </div>
     </div>
 </div>
-
-<script type="text/x-magento-init"><?= \Mirasvit\Core\Service\SerializeService::encode(['*' => ['Mirasvit_Gdpr/js/customer/account/requestForm' => []]]) ?></script>
