--- a/src/MirasvitGdpr/view/frontend/templates/customer/account/remove.phtml
+++ b/src/MirasvitGdpr/view/frontend/templates/customer/account/remove.phtml
@@ -1,63 +1,51 @@
 <?php
 /** @var \Mirasvit\Gdpr\Block\Customer\Account\Remove $block */
 ?>
-<div class="block">
-    <div class="block-title">
+<div class="block" mt-8>
+    <div class="block-title text-xl">
         <strong><?= __('Delete account') ?></strong>
     </div>
 
-    <div class="block-content">
-        <div id="remove-intro">
-            <p><?= __('You can request the deletion of your data that we have stored by clicking the button below:') ?></p>
-            <div class="actions-toolbar">
-                <button
-                    type="button"
-                    class="action"
-                    data-show="remove-form"
-                    aria-controls="remove-form"
-                    aria-expanded="false"
-                    data-expanded-text="<?= __('Hide') ?>"
-                    data-collapsed-text="<?= __('Delete my account') ?>">
+    <div class="block-content" x-data="{active: false}">
 
-                    <span><?= __('Delete my account') ?></span>
-                </button>
-            </div>
-        </div>
 
-        <form method="post" action="<?= $block->getUrl('gdpr/customer/remove') ?>" data-mage-init='{"validation":{}}'>
+        <form method="post" action="<?= $block->getUrl('gdpr/customer/remove') ?>">
             <input name="form_key" type="hidden" value="<?= $block->getFormKey() ?>"/>
 
-            <fieldset class="fieldset" hidden="hidden" id="remove-form" role="region">
+            <fieldset class="fieldset" style="display: none" x-show="active" id="remove-form">
                 <div class="field">
                     <p><strong><?= __('Please keep in mind that we are deleting your account. After the deletion of your account, you will not be able to access your account anymore.') ?></strong></p>
                 </div>
 
                 <div class="field required">
-                    <label class="label" for="current-password-remove">
+                    <label class="label" for="rm-current-password">
                         <span><?= __('Current Password') ?></span>
                     </label>
                     <div class="control">
-                        <input id="current-password-remove" type="password" class="input-text" name="password" autocomplete="off" aria-required="true" data-validate="{required:true}">
+                        <input id="rm-current-password" type="password" class="input-text" name="password" autocomplete="off" aria-required="true" required/>
                     </div>
                 </div>
-                <?php if ($points = $block->getIsCustomerHasPassword()): ?>
-                    <p class="mst_gdpr_no_password">
-                        <?= __('Please, sing out and use "Forgot Password" link if you used Social Login to sign up the store. You have to register with default registration form to download personal data, as we do not store your social password.') ?>
-                    </p>
-                <?php endif; ?>
+
                 <div class="field choice required">
-                    <input type="checkbox" id="remove_accept" data-validate="{required:true}" name="accept" value="1" class="checkbox">
+                    <input type="checkbox" id="remove_accept" required name="accept" value="1" class="checkbox">
                     <label for="remove_accept" class="label"><span><?= __('I understand and want remove my personal data') ?></span></label>
                 </div>
 
                 <div class="actions-toolbar">
-                    <button type="submit" class="action primary">
+                    <button type="submit" class="action btn btn-primary">
                         <span><?= __('Send request') ?></span>
                     </button>
                 </div>
             </fieldset>
         </form>
+
+        <div id="remove-intro" x-show="!active">
+            <p><?= __('You can request the deletion of your data that we have stored by clicking the button below:') ?></p>
+            <div class="actions-toolbar">
+                <button type="button" class="action btn" @click="active=true">
+                    <span><?= __('Delete my account') ?></span>
+                </button>
+            </div>
+        </div>
     </div>
 </div>
-
-<script type="text/x-magento-init"><?= \Mirasvit\Core\Service\SerializeService::encode(['*' => ['Mirasvit_Gdpr/js/customer/account/requestForm' => []]]) ?></script>
