--- a/src/MirasvitGdpr/view/frontend/templates/customer/account/download.phtml
+++ b/src/MirasvitGdpr/view/frontend/templates/customer/account/download.phtml
@@ -1,40 +1,34 @@
 <?php
 /** @var \Mirasvit\Gdpr\Block\Customer\Account\Anonymize $block */
 ?>
-<div class="block mt-8">
-    <div class="block-title text-xl">
-        <strong><?= __('Download personal data') ?></strong>
-    </div>
+<div class="block">
+    <div class="mb-6 text-2xl block-title"><?= __('Download personal data') ?></div>
 
-    <div class="block-content" x-data="{active: false}">
+    <div class="block-content card" x-data="{active: false}">
         <form method="post" action="<?= $block->getUrl('gdpr/customer/download') ?>">
             <input name="form_key" type="hidden" value="<?= $block->getFormKey() ?>"/>
 
             <fieldset class="fieldset" style="display: none" id="download-form" x-show="active">
-                <div class="field required">
+                <div class="field required mb-4">
                     <label class="label" for="dl-current-password">
                         <span><?= __('Current Password') ?></span>
                     </label>
                     <div class="control">
-                        <input id="dl-current-password" type="password" class="input-text" name="password" autocomplete="off" aria-required="true" required/>
+                        <input id="dl-current-password" type="password" class="form-input" name="password" autocomplete="off" aria-required="true" required/>
                     </div>
                 </div>
 
-                <div class="actions-toolbar">
-                    <button type="submit" class="action primary btn btn-primary">
-                        <span><?= __('Download') ?></span>
-                    </button>
-                </div>
+                <button type="submit" class="action primary btn btn-primary">
+                    <span><?= __('Download') ?></span>
+                </button>
             </fieldset>
         </form>
 
-        <div id="download-intro" x-show="! active">
-            <p><?= __('You can download all your data that we have stored by clicking the button below:') ?></p>
-            <div class="actions-toolbar">
-                <button type="button" class="action btn" data-show="download-form" data-hide="download-intro" @click="active=true">
-                    <span><?= __('Process') ?></span>
-                </button>
-            </div>
+        <div id="download-intro" x-show="!active">
+            <p class="mb-2"><?= __('You can download all your data that we have stored by clicking the button below:') ?></p>
+            <button type="button" class="btn btn-primary" data-show="download-form" data-hide="download-intro" @click="active=true">
+                <span><?= __('Process') ?></span>
+            </button>
         </div>
     </div>
 </div>
